Update toc-panel to be fixed on mobile views

--- a/static/custom.css
+++ b/static/custom.css
@@ -432,44 +432,6 @@ p,h1,h2,h3,h4,th,td,a,body {
   padding: 0 1rem 0 1rem;
   cursor: pointer;
 }
-@media screen and (max-width: 68rem) {
-  .sidebar-right {
-    transition: transform 0.3s ease;
-    transform: translateX(100%); /* Start with the sidebar hidden */
-    display: none;
-  }
-  .gdoc-page {
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
-  .sidebar-right__control {
-    display: inline-block;
-  }
-  #toc-control:checked~main .sidebar-right,
-  #toc-control:not(:checked)~main .sidebar-right {
-    transform: translateX(0);
-    display: block; /* Show the sidebar when the control is checked or unchecked */
-  }
-  #toc-control:checked~main .gdoc-page {
-    opacity: 0.25;
-    transform: translateX(18rem); /* Adjust translation when sidebar is brought into view */
-  }
-  #toc-control:checked~.gdoc-header .sidebar-right__control svg.gdoc-icon.gdoc_bookmark {
-    display: none;
-  }
-  #toc-control:checked~.gdoc-header .sidebar-right__control svg.gdoc-icon.gdoc_keyboard_arrow_left {
-    display: inline-block;
-  }
-  #toc-control:not(:checked)~.gdoc-header .sidebar-right__control svg.gdoc-icon.gdoc_keyboard_arrow_left {
-    display: none;
-  }
-  #toc-control:checked~.gdoc-header .sidebar-right__control svg.gdoc-icon.gdoc_keyboard_arrow_right {
-    display: none;
-  }
-  #toc-control:not(:checked)~.gdoc-header .sidebar-right__control svg.gdoc-icon.gdoc_keyboard_arrow_right {
-    display: inline-block;
-  }
-}
-
 .toc-panel {
 	position: fixed;
 	max-height: 75vh;
@@ -477,6 +439,24 @@ p,h1,h2,h3,h4,th,td,a,body {
 	padding: 1rem 1.5rem 1rem 1rem;
 	font-size: 14px;
 	background-color: var(--body-background);
+}
+@media screen and (max-width: 68rem) {
+  .sidebar-right {
+    transition: transform 0.3s ease;
+    transform: translateX(100%); /* Start with the sidebar hidden */
+    display: none;
+	position: fixed;
+	right: 10rem;
+  }
+  .gdoc-page {
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+  .sidebar-right__control {
+    display: inline-block;
+  }
+  .toc-panel {
+	width: 12rem;
+  }
 }
 .toc-list {
   list-style-type: none;
